--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -17,9 +17,26 @@ jobs:
           java-version: '20'
           distribution: 'temurin'
           cache: maven
-          node-version: '20'
-      - name: Build and Test on Windows
-        run: mvn compile test "-Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml"
+
+      - name: Set up ChromeDriver on Windows
+        uses: actions/setup-chromedriver@v2
+
+      - name: Set up GeckoDriver (Firefox) on Windows
+        uses: mozilla/geckodriver@v0.30.0
+
+      - name: Set up EdgeDriver on Windows
+        run: |
+          choco install microsoft-edge
+          choco install msedgedriver
+
+      - name: Build and Test on Windows (Chrome)
+        run: mvn compile test -Dbrowser=chrome -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+
+      - name: Build and Test on Windows (Firefox)
+        run: mvn compile test -Dbrowser=firefox -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+
+      - name: Build and Test on Windows (Edge)
+        run: mvn compile test -Dbrowser=edge -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
 
   test_macos:
     runs-on: macos-latest
@@ -31,9 +48,24 @@ jobs:
           java-version: '20'
           distribution: 'temurin'
           cache: maven
-          node-version: '20'
-      - name: Build and Test on macOS
-        run: mvn compile test -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+
+      - name: Set up ChromeDriver on macOS
+        uses: actions/setup-chromedriver@v2
+
+      - name: Set up GeckoDriver (Firefox) on macOS
+        run: brew install geckodriver
+
+      - name: Set up EdgeDriver on macOS
+        run: brew install --cask microsoft-edge
+
+      - name: Build and Test on macOS (Chrome)
+        run: mvn compile test -Dbrowser=chrome -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+
+      - name: Build and Test on macOS (Firefox)
+        run: mvn compile test -Dbrowser=firefox -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+
+      - name: Build and Test on macOS (Edge)
+        run: mvn compile test -Dbrowser=edge -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
 
   test_ubuntu:
     runs-on: ubuntu-latest
@@ -45,6 +77,25 @@ jobs:
           java-version: '20'
           distribution: 'temurin'
           cache: maven
-          node-version: '20'
-      - name: Build and Test on Ubuntu
-        run: mvn compile test -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+
+      - name: Set up ChromeDriver on Ubuntu
+        uses: actions/setup-chromedriver@v2
+
+      - name: Set up GeckoDriver (Firefox) on Ubuntu
+        run: sudo apt-get install -y firefox-geckodriver
+
+      - name: Set up EdgeDriver on Ubuntu
+        run: |
+          sudo apt-get install -y software-properties-common
+          sudo add-apt-repository ppa:mozillateam/ppa
+          sudo apt-get update
+          sudo apt-get install -y microsoft-edge-stable
+
+      - name: Build and Test on Ubuntu (Chrome)
+        run: mvn compile test -Dbrowser=chrome -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+
+      - name: Build and Test on Ubuntu (Firefox)
+        run: mvn compile test -Dbrowser=firefox -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
+
+      - name: Build and Test on Ubuntu (Edge)
+        run: mvn compile test -Dbrowser=edge -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
