--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -86,7 +86,11 @@ jobs:
       - name: Set up GeckoDriver (Firefox) on Ubuntu
         run: |
           sudo apt-get update
-          sudo apt-get install -y firefox-geckodriver
+          sudo apt-get install -y firefox
+          wget https://github.com/mozilla/geckodriver/releases/download/v0.30.0/geckodriver-v0.30.0-linux64.tar.gz
+          tar -xzf geckodriver-v0.30.0-linux64.tar.gz
+          sudo mv geckodriver /usr/local/bin/
+          rm geckodriver-v0.30.0-linux64.tar.gz
 
       - name: Set up EdgeDriver on Ubuntu
         run: |
