--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -71,6 +71,7 @@ jobs:
           wget https://msedgedriver.azureedge.net/114.0.1823.51/edgedriver_mac64.zip
           unzip edgedriver_mac64.zip
           sudo mv msedgedriver /usr/local/bin/
+          sudo ln -s /usr/local/bin/msedgedriver /usr/local/bin/edgedriver
 
       - name: Build and Test on macOS (Chrome)
         run: mvn compile test -Dbrowser=chrome -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
@@ -108,6 +109,7 @@ jobs:
           wget https://msedgedriver.azureedge.net/114.0.1823.51/edgedriver_linux64.zip
           unzip edgedriver_linux64.zip
           sudo mv msedgedriver /usr/local/bin/
+          sudo ln -s /usr/local/bin/msedgedriver /usr/local/bin/edgedriver
 
       - name: Build and Test on Ubuntu (Chrome)
         run: mvn compile test -Dbrowser=chrome -Dsurefire.suiteXmlFiles=src/main/resources/testsuites/SmokeTest.xml
